SWARM-0257 [task list] sorting